Align layout and styling with legacy theme, fix snackbar readability, and remove partner header item

--- a/proof-of-heart-nostr/src/app/app.scss
+++ b/proof-of-heart-nostr/src/app/app.scss
@@ -17,8 +17,8 @@
     }
 
     @media (min-width: 1024px) {
-      margin-left: 140px;
-      margin-right: 140px;
+      margin-left: 200px;
+      margin-right: 200px;
       margin-top: 60px;
       margin-bottom: 20px;
     }
