--- a/proof-of-heart-nostr/src/app/footer/footer.scss
+++ b/proof-of-heart-nostr/src/app/footer/footer.scss
@@ -5,7 +5,7 @@
   font-size: 14px;
   color: #666666;
   margin-bottom: 0;
-  background: #fcfcfc;
+  background: transparent;
 
   .footer-nav {
     display: flex;
