--- a/proof-of-heart-nostr/src/app/header/header.scss
+++ b/proof-of-heart-nostr/src/app/header/header.scss
@@ -55,10 +55,9 @@
         justify-content: center;
       }
 
-      .social-icon {
-        width: 16px;
-        height: 16px;
-        display: block;
+      i {
+        font-size: 14px;
+        line-height: 1;
       }
     }
   }
@@ -77,7 +76,7 @@
 
   .menu {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-items: center;
     gap: 10px;
